ingress/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: app-v1
                port:
                  number: 8080
    - host: "app1.guaya.com"
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: app-v1
              port:
                number: 8080
        - pathType: Prefix
          path: "/app2"
          backend:
            service:
              name: api-server-svc
              port:
                number: 9090
    - host: "otrohost.guaya.com"
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: api-server-svc
              port:
                number: 9090
